# DD2410-Introduction-to-Robotics

./: README.md
Inverse Kinematics/: IK_functions.py
Mapping/: mapping.py
Mapping/mapping_assignment/: CMakeLists.txt  package.xml
Mapping/mapping_assignment/bags/: stage_1.bag  stage_2.bag  stage_3.bag  stage_4.bag
Mapping/mapping_assignment/bags/txt/: README.md  stage_1.txt  stage_2.txt  stage_3.txt  stage_4.txt
Mapping/mapping_assignment/launch/: play.launch
Mapping/mapping_assignment/scripts/: mapping.py
Mapping/mapping_assignment_metapackage/: CMakeLists.txt  package.xml
Mapping/turtlebot3_description/urdf/: turtlebot3_burger.gazebo.xacro
Project/: README_Project.md  behaviours_student.py  bt_students.py  launch_project.launch
planning/: solution.py
