<?xml version="1.0"?>
<package format="2">
  <name>mapping_assignment</name>
  <version>0.1.0</version>
  <description>Mapping assignment of the robotics course</description>
  
  <maintainer email="dduberg@kth.se">Daniel Duberg</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>map_msgs</depend>
  <depend>message_filters</depend>
  <depend>nav_msgs</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>turtlebot3_description</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  
</package>
